# nsphere

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac  encode_movie.sh  original.txt
doc/: article.txt  details.txt  library-search.txt  paper.bibtex
src/: Makefile.am  capframe.c  capframe.h  collection_pack.c  collection_pack.h  csv_prepare.c  csv_prepare.h  gen_vertexarray.c  gen_vertexarray.h  nsphere-ffmpeg.c  nsphere.c  nvidia-cuda.c  plot_file.c  plot_file.h  polar_collect.c  polar_collect.h  prepare_vertices.c  prepare_vertices.h  read_status.h  spit_prepare.c  spit_prepare.h  verbose_read.c  verbose_read.h  writefile.c  writefile.h
src/ppm-out/: Makefile.am  ppm-out.c
